# canopy

./: .gitignore  Cargo.toml  README.md
.omc/: project-memory.json
.omc/sessions/: 83119cf8-95aa-41e7-b807-48b17212c53f.json
.omc/state/: agent-replay-bb4ccbd7-9d8e-44bc-b7e7-a82fc3858531.jsonl
.omc/state/sessions/bb4ccbd7-9d8e-44bc-b7e7-a82fc3858531/: last-tool-error-state.json  mission-state.json  pre-tool-advisory-throttle.json  subagent-tracking-state.json
.serena/: project.yml
docs/: ABTEST.md  DESIGN.md  MECHANISMS.md  OPERATIONS.md  REALRUN.md
docs/research/: cli-contracts.md  linear-graphql.md
docs/review/: 2026-07-22-codex-review-triage.md
prompts/: decomposer.md  executor.md  merger.md  planner.md  reconciler.md  reviewer_codebase.md  reviewer_output.md  reviewer_testadequacy.md  reviewer_transcript.md
src/: config.rs  e2e.rs  gitops.rs  ledger.rs  main.rs  mergelane.rs  model.rs  prompt.rs  scheduler.rs
src/agent/: agy.rs  claude.rs  codex.rs  mod.rs  stub.rs
src/mechanisms/: designdocs.rs  fieldguide.rs  megafile.rs  mod.rs
src/tracker/: linear.rs  mod.rs  sqlite.rs
